Update to latest CVS version